k8s/base/nginx-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: laravel-nginx
  namespace: portafolio
  annotations:
    ignore-check.kube-linter.io/privileged-container: "This deployment needs to run as privileged because it needs kernel access"
    ignore-check.kube-linter.io/no-read-only-root-fs: "This deployment needs to run with a writable root filesystem to allow Nginx to write logs and cache files"
    ignore-check.kube-linter.io/no-run-as-non-root: "This deployment needs to run as root to allow Nginx to bind to port 80"
    ignore-check.kube-linter.io/no-run-as-user: "This deployment needs to run as root to allow Nginx to bind to port 80"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: laravel-nginx
  template:
    metadata:
      labels:
        app: laravel-nginx
    spec:
      containers:
        - name: nginx
          image: nginx:alpine
          securityContext:
            runAsNonRoot: true
            runAsUser: 101
            runAsGroup: 101
            readOnlyRootFilesystem: true
          ports:
            - containerPort: 80
          volumeMounts:
            - name: laravel-code
              mountPath: /var/www/html
            - name: nginx-config
              mountPath: /etc/nginx/conf.d
            - name: nginx-cache
              mountPath: /var/cache/nginx
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "100m"
      volumes:
        - name: laravel-code
          persistentVolumeClaim:
            claimName: laravel-pvc
        - name: nginx-config
          configMap:
            name: nginx-config
        - name: nginx-cache
          emptyDir: {} # 👈 esto crea un volumen temporal writable
