k8s/base/php-fpm-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: laravel-app
  namespace: portafolio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: laravel-app
  template:
    metadata:
      labels:
        app: laravel-app
    spec:
      containers:
        - name: php-fpm
          image: migbertweb/portafolio-app
          securityContext:
            runAsNonRoot: true
            runAsUser: 1000
            readOnlyRootFilesystem: true
          ports:
            - containerPort: 9000
          volumeMounts:
            - name: laravel-code
              mountPath: /var/www/html
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "200m"
      volumes:
        - name: laravel-code
          persistentVolumeClaim:
            claimName: laravel-pvc
