k8s/base/service-nginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: laravel-nginx
  namespace: portafolio
spec:
  selector:
    app: laravel-nginx
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
