k8s/base/service-php-fpm.yaml
apiVersion: v1
kind: Service
metadata:
  name: laravel-service
  namespace: portafolio
spec:
  selector:
    app: laravel-app
  ports:
    - port: 9000
      targetPort: 9000
