k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: laravel-service
  namespace: portafolio
spec:
  selector:
    app: laravel-app
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
