k8s/base/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: laravel-ingressroute
  namespace: portafolio
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`migbertweb.xyz`)
      kind: Rule
      services:
        - name: laravel-service
          port: 80
      middlewares:
        - name: default-headers
        - name: rate-limit
  tls:
    certResolver: cloudflare
